set up rest of the needed services

--- a/kafka/java/monitor/src/main/resources/static/bpmn.html
+++ b/kafka/java/monitor/src/main/resources/static/bpmn.html
@@ -69,7 +69,7 @@
   });
 
   function loadModel() {
-    $.get('/order-collaboration.bpmn', function(data) {
+    $.get('/booking-collaboration.bpmn', function(data) {
        viewer.importXML(data, function(err) {
          if (err) {
            console.log('error rendering', err);
