--- a/kafka/java/booking/src/main/resources/static/booking.html
+++ b/kafka/java/booking/src/main/resources/static/booking.html
@@ -55,14 +55,18 @@
     <form id="bookingForm">
         <label for="date">Enter Date:</label>
         <input type="text" id="date" name="date" placeholder="YYYY-MM-DD" required>
+        <div style="display:flex; flex-direction: row; justify-content: left; align-items: center">
+            <input type="checkbox" id="invoice" name="invoice">
+            <label for="invoice">Pay by invoice</label>
+        </div>
         <input type="submit" value="Book">
     </form>
 </div>
 
 <script>
-    function book(date) {
+    function book(date, invoice) {
         $.ajax({
-            url: "./api/cart/book?date=" + date,
+            url: "./api/cart/book?date=" + date + "&invoice=" + invoice,
             type: "put",
             data: {}
         }).done(function(result) {
@@ -74,7 +78,8 @@
     document.getElementById("bookingForm").addEventListener("submit", function(event) {
         event.preventDefault();
         let date = document.getElementById("date").value;
-        book(date);
+        let invoice = document.getElementById("invoice").checked;
+        book(date, invoice);
     });
 </script>
 <script src="./jquery.min.js"></script>
