--- a/kafka/java/reporting/src/main/resources/public/index.html
+++ b/kafka/java/reporting/src/main/resources/public/index.html
@@ -50,6 +50,8 @@
             <ul class="nav nav-tabs">
                 <li role="presentation" class="nav-item"><a href="#locationMonitorDiv" class="nav-link" data-toggle="tab">Location
                     Monitor</a></li>
+                <li role="presentation" class="nav-item"><a href="#windowMonitorDiv" class="nav-link" data-toggle="tab">Window
+                    Monitor</a></li>
             </ul>
         </div>
     </div>
@@ -67,6 +69,29 @@
                         <tr>
                             <th>Area of Interest</th>
                             <th>Booking Count</th>
+                        </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="tab-content">
+
+                <div class="tab-pane" role="tabpanel" id="windowMonitorDiv">
+
+                    <table id="windowMonitorTable" class="table-container">
+                        <thead>
+                        <tr>
+                            <th>EventDateTime</th>
+                            <th>Count</th>
                         </tr>
                         </thead>
                         <tbody></tbody>
@@ -128,6 +153,7 @@
 
         function refreshData() {
             fetchData('/locationMonitor', 'locationMonitorTable');
+            fetchData('/windowMonitor', 'windowMonitorTable');
         }
 
         setInterval(refreshData, 2000); // Refresh data every 2 seconds
