bug fixes windows

--- a/kafka/java/reporting/src/main/resources/public/index.html
+++ b/kafka/java/reporting/src/main/resources/public/index.html
@@ -88,12 +88,12 @@
                     </table>
                 </div>
                 <div class="tab-pane fade" id="windowMonitorDiv" role="tabpanel">
-                    Here the windows are monitored.
+                    The number of bookings per day per location realized with a tumbling window of 1 day.
                     <table id="windowMonitorTable" class="table-container">
                         <thead>
                         <tr>
-                            <th>Location</th>
-                            <th>Bookings Today</th>
+                            <th>Date-Location</th>
+                            <th>Number of Bookings</th>
                         </tr>
                         </thead>
                         <tbody></tbody>
